force-app/main/default/objects/redwing__ILT_Location__c/redwing__ILT_Location__c.object-meta.xml
<CustomObject>
    <label>ILT Location</label>
    <nameField>
        <label>ILT Location Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ILT Locations</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>