force-app/main/default/objects/redwing__ILT_Location__c/fields/redwing__Address_2__c.field-meta.xml
<CustomField>
    <fullName>redwing__Address_2__c</fullName>
    <label>Address 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>