force-app/main/default/objects/redwing__ILT_Location__c/fields/redwing__City__c.field-meta.xml
<CustomField>
    <fullName>redwing__City__c</fullName>
    <description>City where Location is located</description>
    <label>City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>