force-app/main/default/objects/redwing__ILT_Location__c/fields/redwing__Description__c.field-meta.xml
<CustomField>
    <fullName>redwing__Description__c</fullName>
    <description>Description, important information about the Location</description>
    <label>Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>