force-app/main/default/objects/redwing__ILT_Location__c/fields/redwing__Directions__c.field-meta.xml
<CustomField>
    <fullName>redwing__Directions__c</fullName>
    <label>Directions</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>