force-app/main/default/objects/redwing__ILT_Location__c/fields/redwing__Max_Seats__c.field-meta.xml
<CustomField>
    <fullName>redwing__Max_Seats__c</fullName>
    <description>Maximum number of seats (participants) for the Location</description>
    <label>Max Seats</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>