force-app/main/default/objects/redwing__ILT_Location__c/fields/redwing__Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>redwing__Postal_Code__c</fullName>
    <description>Zip / postal code</description>
    <label>Postal Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>