force-app/main/default/objects/redwing__ILT_Location__c/fields/redwing__Street__c.field-meta.xml
<CustomField>
    <fullName>redwing__Street__c</fullName>
    <description>Street address of the Location</description>
    <label>Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>