force-app/main/default/objects/redwing__ILT_Location__c/listViews/redwing__All.listView-meta.xml
<ListView>
    <fullName>redwing__All</fullName>
    <columns>NAME</columns>
    <columns>redwing__Address_1__c</columns>
    <columns>redwing__City__c</columns>
    <columns>redwing__Postal_Code__c</columns>
    <columns>redwing__State__c</columns>
    <columns>redwing__Country__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>